# sqlformatter

./: .gitignore  Makefile  Pipfile  README.md  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
sqlformatter/: __main__.py  cli.py  config.py  helpers.py  main.py  sql_query.py  sqlformatter.py
tests/: test_helpers.py  test_sql_query.py  test_sqlformatter.py
tests/test_sqls/: expected_1.sql  original_1.sql
