[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning

addopts = -v
          --cov-report=term-missing
          --cov-report=xml:coverage.xml
          --cov=./sqlformatter/

[pylint]
disable = C0330, R0913, R0903 ; bad-continuation
fail-under = 8
ignore = tests

output-format = colorized
reports = yes
score = yes

max-line-length = 89

[options.entry_points]
console_scripts =
    sqlformatter = sqlformatter.__main__:main

[options.packages.find]
exclude = tests